# Drivers

./: pyproject.toml
Python/: setup.py
Python/syndesi_drivers/: driver.py  scpi_driver.py
Python/syndesi_drivers/cli/: cli.py  syndesi_drivers.py  tools.py
Python/syndesi_drivers/multimeters/: siglent_sdm30x5.py
Python/syndesi_drivers/powersupplies/: siglent_spd3303x.py  tenma_72_13360.py
docs/source/: standard.rst
syndesi_drivers/test_and_measurement/cli/: tools.py
syndesi_drivers/test_and_measurement/multimeters/: keysight_344xxx.py  siglent_sdm30x5.py
syndesi_drivers/test_and_measurement/oscilloscopes/siglent/: siglent_sds1102cml.py
syndesi_drivers/test_and_measurement/powersupplies/: siglent_spd3303x.py
syndesi_drivers/test_and_measurement/waveform_generators/: tektronix_afg1022.py
