[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "syndesi-drivers"
dynamic = ["version"]
description = "Syndesi drivers repository"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Sébastien Deriaz", email = "sebastien.deriaz1@gmail.com" }]
keywords = ["python", "syndesi", "drivers", "ip",
"serial", "visa", "protocol", "driver", "adpater"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
#dependencies = ['prompt_toolkit', 'pyserial', 'rich', 'platformdirs']

#[project.optional-dependencies]
#extra = [""]

[tool.setuptools.packages.find]
where = ["."]
include = ["syndesi_drivers*"]

# ----------------------------
# Tooling configs
# ----------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["^tests/fixtures/"]

[tool.bandit]
skips = ["B101"]
exclude = ["tests"]

[tool.pylint]
# Disable too-many-arguments, this is the case for adapters/protocols/drivers
# All arguments are necessary and it would not make sense to group them / move them
# too-many-positional-arguments is kept however because it makes sense
# Also disable W1203 to allow f-strings in logging lines
disable = ["R0913", "W1203", "R0903"]
